2013-01-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-tramp-file-p): Check, whether NAME is unibyte.

	* net/tramp-sh.el (tramp-sh-handle-set-file-acl): Do not suppress
	basic attributes.
	(tramp-sh-handle-set-file-acl): Improve error checking.

2013-01-24  Dmitry Antipov  <dmantipov@yandex.ru>

	* doc-view.el (doc-view-display): Force mode line update until all
	document is converted.  Suggested by Stefan Monnier (Bug#13164).

2013-01-23  Bastien Guerry  <bzg@gnu.org>

	* paren.el (show-paren-function): Make sure an overlay exists
	before trying to delete it.  Also use `pos' as a position only
	when it is an integer.

2013-01-23  Dmitry Antipov  <dmantipov@yandex.ru>

	* play/gametree.el (gametree-break-line-here): Use point-marker.

2013-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cmds.el (tramp-bug, tramp-append-tramp-buffers): Mark
	descriptive parts with `display' property.

2013-01-21  Agustín Martín Domingo  <agustin.martin@hispalinux.es>

	* textmodes/ispell.el (ispell-hunspell-dictionary-equivs-alist):
	New variable to map standard dict names to hunspell ones.
	(ispell-set-spellchecker-params): Make sure specific dict names
	are used for standard dicts with hunspell.

2013-01-21  Tassilo Horn  <tsdh@gnu.org>

	* textmodes/reftex-cite.el (reftex-format-citation): Add format
	chars for note (%N) and url (%U).
	* textmodes/reftex-vars.el (reftex-cite-format): Document them.

2013-01-21  Juri Linkov  <juri@jurta.org>

	* frame.el: Bind `f10' in `esc-map' to `toggle-frame-maximized'
	in addition to existing separate binding `meta f10' in `global-map'.
	(Bug#13484)

2013-01-21  Michael Albinus  <michael.albinus@gmx.de>

	Improve XEmacs compatibility.

	* net/tramp.el (tramp-replace-environment-variables): Make it a defun.

	* net/tramp-adb.el (top): Require `time-date'.
	(tramp-adb-ls-output-time-less-p): Use `tramp-time-less-p'.
	(tramp-adb-handle-copy-file, tramp-adb-handle-rename-file): Use