@@ -259,11 +259,10 @@ matching parenthesis is highlighted in `show-paren-style' after
 			    (- (point) dir)))))
 	      (if show-paren-overlay
 		  (move-overlay show-paren-overlay from to (current-buffer))
-		(setq show-paren-overlay (make-overlay from to nil t)))))
-	  ;;
-	  ;; Always set the overlay face, since it varies.
-	  (overlay-put show-paren-overlay 'priority show-paren-priority)
-	  (overlay-put show-paren-overlay 'face face)))
+		(setq show-paren-overlay (make-overlay from to nil t))))
+            ;; Always set the overlay face, since it varies.
+            (overlay-put show-paren-overlay 'priority show-paren-priority)
+            (overlay-put show-paren-overlay 'face face))))
     ;; show-paren-mode is nil in this buffer.
     (and show-paren-overlay
 	 (delete-overlay show-paren-overlay))
